# plc-error-classififer

./: .env.example  .gitignore  Makefile  README.md  pipelineflow.md  pyproject.toml  requirements.txt
eval/: fixtures.json  report.md  suggestion_quality.json
samples/: constant_error.txt  constant_error.xml  empty_project.txt  empty_project.xml
scripts/: classify.py  smoke.py  verify.py
src/api/: main.py  schemas.py
src/classifier/: __init__.py  classifier.py  confidence.py  prompts.py
src/eval/: fixtures.py  generator.py  metrics.py  report.py  runner.py
src/llm/: __init__.py  anthropic.py  factory.py  google.py  mock.py  provider.py
src/parser/: __init__.py  cascade.py  extractors.py  models.py  parser.py  stages.py
tests/: conftest.py  test_api.py  test_classifier.py  test_eval.py  test_parser.py
